project map: scroll tile into view on mobile; fixes #5982

--- a/meinberlin/assets/scss/components_user_facing/_projects-list.scss
+++ b/meinberlin/assets/scss/components_user_facing/_projects-list.scss
@@ -47,6 +47,7 @@
     @media screen and (min-width: $breakpoint-tablet) {
         display: flex;
         position: relative;
+        align-items: start;
     }
 
     .projects-list__list {
@@ -58,12 +59,17 @@
     }
 
     .projects-list__map {
-        height: 600px;
-        max-height: calc(100vh - 65px);
-
         @media screen and (min-width: $breakpoint-tablet) {
             position: sticky;
             top: 65px;
+        }
+    }
+
+    .geomap-container {
+        height: 600px;
+        max-height: calc(100dvh - 65px);
+
+        @media screen and (min-width: $breakpoint-tablet) {
             height: 1100px;
         }
     }
@@ -71,13 +77,6 @@
     .projects-list__list,
     .projects-list__map {
         flex: 1;
-    }
-
-    .modul-geomap,
-    .geomap-main,
-    .geomap-container,
-    .leaflet-container {
-        height: 100%;
     }
 }
 
